@@ -9,6 +9,7 @@ version 0.8.3 - Not released, available at https://simupop.svn.sourceforge.net/s
   - NEW: introduce pedigreeMating to mate according to a given pedigree
   - NEW: add infoTagger, sexTagger, affectionTagger
   - NEW: add pedigree information handling functions
+  - CHG: add more options to functions in hapMapUtil.py
 
 version 0.8.2 - (Rev 1370) Nov 19, 2007
   - BUG: Fix saveFstat in simuUtil.py
